--- a/public/sass/header.sass
+++ b/public/sass/header.sass
@@ -199,11 +199,15 @@
     background: $white-two
     cursor: pointer
 
-.header-filter-label-popup
+.header-filter-label-popup, .select2-results__group
     font-size: 12px
     color: $warm-grey
     padding: 5px 0
     clear: both
+    font-weight: 300
+
+.select2-container--default .select2-results__group
+    padding: 6px 30px
 
 .header-filter-simple-list.with-checkboxes
     padding: 5px 0
