--- a/public/sass/icons.sass
+++ b/public/sass/icons.sass
@@ -1,7 +1,7 @@
 @font-face
     font-family: 'libhouse-icons'
-    src:  url('../fonts/libhouse-icons.eot?cvvopd')
-    src:  url('../fonts/libhouse-icons.eot?cvvopd#iefix') format('embedded-opentype'), url('../fonts/libhouse-icons.ttf?cvvopd') format('truetype'), url('../fonts/libhouse-icons.woff?cvvopd') format('woff'), url('../fonts/libhouse-icons.svg?cvvopd#libhouse-icons') format('svg')
+    src:  url('../fonts/libhouse-icons.eot?lpzgnu')
+    src:  url('../fonts/libhouse-icons.eot?lpzgnu#iefix') format('embedded-opentype'), url('../fonts/libhouse-icons.ttf?lpzgnu') format('truetype'), url('../fonts/libhouse-icons.woff?lpzgnu') format('woff'), url('../fonts/libhouse-icons.svg?lpzgnu#libhouse-icons') format('svg')
     font-weight: normal
     font-style: normal
     font-display: block
@@ -25,41 +25,59 @@
     margin-left: 7px
 
 .lh-icon-camera:before
-    content: "\e90c"
+    content: "\e90d"
     color: #c4c4c4
+
 .lh-icon-select-arrow:before
     content: "\e90a"
     color: #bdbdbd
-.lh-icon-arrow-right:before
-    content: "\e90b"
+
+.lh-icon-arrow-left:before
+    content: "\e90c"
     color: #f6f6f6
+    transform: rotate(180deg)
+    display: inline-block
+
+.lh-icon-arrow-right:before
+    content: "\e90c"
+    color: #f6f6f6
+
 .lh-icon-checker:before
-    content: "\e909"
+    content: "\e90b"
     color: #49c628
+
 .lh-icon-eye:before
     content: "\e900"
     color: #c4c4c4
+
 .lh-icon-filter:before
     content: "\e901"
     color: #f6f6f6
+
 .lh-icon-heart:before
     content: "\e902"
     color: #c4c4c4
+
 .lh-icon-map:before
     content: "\e903"
     color: #c4c4c4
+
 .lh-icon-place:before
     content: "\e904"
     color: #5a5a5a
+
 .lh-icon-search:before
     content: "\e905"
     color: #c4c4c4
+
 .lh-icon-user:before
     content: "\e906"
     color: #5a5a5a
+
 .lh-icon-view:before
     content: "\e907"
     color: #c4c4c4
+
 .lh-icon-view-alternative:before
     content: "\e908"
     color: #c4c4c4
