--- a/public/sass/plugins/slick.sass
+++ b/public/sass/plugins/slick.sass
@@ -31,3 +31,23 @@
 
 .slick-single-silde .slick-dots li.slick-active:before
     background: $lightish-blue
+
+.slick-arrow
+    position: absolute
+    top: 45.7%
+    width: 60px
+    height: 60px
+    background: #fff
+    @include border-radius(50%)
+    font-size: 10px
+    z-index: 1
+    text-align: center
+    line-height: 60px
+    cursor: pointer
+
+.slick-arrow .lh-icon
+    margin: 0
+    line-height: 60px
+
+.slick-arrow i:before
+    color: $dark-navy-blue
