--- a/public/sass/core.sass
+++ b/public/sass/core.sass
@@ -32,4 +32,7 @@ h1
     font-weight: bold
     line-height: 20px
     color: $dark-navy-blue
-    margin: 50px 0
+    margin: 30px
+
+.wrap-sidebar
+    margin-top: 110px
