--- a/public/sass/entries/realty.sass
+++ b/public/sass/entries/realty.sass
@@ -47,6 +47,10 @@ div.realty-title
 
 .realty-favorite
     margin-bottom: 10px
+    cursor: pointer
+
+.realty-favorite:hover span
+    border: 0
 
 .realty-counter
     margin-left: 10px
@@ -87,7 +91,7 @@ div.realty-title
     width: 100%
 
 .realty-single-photo
-    margin-bottom: 20px
+    margin: 40px 0 50px 0
 
 .realty-single-photo-prev
     left: 50px
@@ -96,4 +100,52 @@ div.realty-title
     right: 50px
 
 .realty-single-photo-nav
+    margin-bottom: 30px
+
+.realty-info
+    margin: -5px 0 30px 0
+    padding: 0
+    text-align: right
+
+.realty-info li
+    list-style: none
+    color: $warm-grey
+
+.realty-info li:not(:first-child)
+    margin-left: 30px
+
+.realty-info .realty-counter
+    margin-left: 0
+
+.realty-single
+    margin-top: 40px
+    padding: 40px 50px
+    border: solid 1px $white-two
+
+.realty-single-photo, .realty-single-photo-nav
+    margin-left: -50px
+    margin-right: -50px
+
+h1.realty-title
+    margin: 0 0 30px 0
+
+.realty-col-info-wrap
+    padding-bottom: 20px
+
+.realty-margin-btm
     margin-bottom: 50px
+
+.realty-col-info-table .d-table-cell
+    width: 25%
+
+.realty-col-info-table .d-table-cell:not(:last-child)
+    padding-right: 15px
+
+.realty-sidebar-info
+    background: $white-two
+    padding: 40px 50px
+
+.realty-sidebar-price
+    font-size: 22px
+    font-weight: bold
+    margin-bottom: 10px
