--- a/public/sass/icons.sass
+++ b/public/sass/icons.sass
@@ -24,6 +24,10 @@
 .lh-icon.lh-after
     margin-left: 7px
 
+.lh-icon-share:before
+    content: "\e909"
+    color: #c4c4c4
+
 .lh-icon-camera:before
     content: "\e90d"
     color: #c4c4c4
