--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -42,6 +42,10 @@
 .lh-icon.lh-after {
   margin-left: 7px; }
 
+.lh-icon-share:before {
+  content: "";
+  color: #c4c4c4; }
+
 .lh-icon-camera:before {
   content: "";
   color: #c4c4c4; }
@@ -134,7 +138,10 @@ h1 {
   font-weight: bold;
   line-height: 20px;
   color: #000b28;
-  margin: 50px 0; }
+  margin: 30px; }
+
+.wrap-sidebar {
+  margin-top: 110px; }
 
 .btn, .btn-disabled {
   padding: 11px 20px;
@@ -1045,7 +1052,11 @@ div.realty-title {
   line-height: 27px; }
 
 .realty-favorite {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  cursor: pointer; }
+
+.realty-favorite:hover span {
+  border: 0; }
 
 .realty-counter {
   margin-left: 10px; }
@@ -1092,7 +1103,7 @@ div.realty-title {
   width: 100%; }
 
 .realty-single-photo {
-  margin-bottom: 20px; }
+  margin: 40px 0 50px 0; }
 
 .realty-single-photo-prev {
   left: 50px; }
@@ -1101,7 +1112,55 @@ div.realty-title {
   right: 50px; }
 
 .realty-single-photo-nav {
+  margin-bottom: 30px; }
+
+.realty-info {
+  margin: -5px 0 30px 0;
+  padding: 0;
+  text-align: right; }
+
+.realty-info li {
+  list-style: none;
+  color: #a1a1a1; }
+
+.realty-info li:not(:first-child) {
+  margin-left: 30px; }
+
+.realty-info .realty-counter {
+  margin-left: 0; }
+
+.realty-single {
+  margin-top: 40px;
+  padding: 40px 50px;
+  border: solid 1px #f6f6f6; }
+
+.realty-single-photo, .realty-single-photo-nav {
+  margin-left: -50px;
+  margin-right: -50px; }
+
+h1.realty-title {
+  margin: 0 0 30px 0; }
+
+.realty-col-info-wrap {
+  padding-bottom: 20px; }
+
+.realty-margin-btm {
   margin-bottom: 50px; }
+
+.realty-col-info-table .d-table-cell {
+  width: 25%; }
+
+.realty-col-info-table .d-table-cell:not(:last-child) {
+  padding-right: 15px; }
+
+.realty-sidebar-info {
+  background: #f6f6f6;
+  padding: 40px 50px; }
+
+.realty-sidebar-price {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 10px; }
 
 .toasts-wrap {
   position: fixed;
