--- a/public/sass/entries/realty.css
+++ b/public/sass/entries/realty.css
@@ -1,20 +1,26 @@
 /*
-Error: Undefined variable: "$lightish-blue".
-        on line 4 of realty.sass
+Error: Undefined variable: "$white-two".
+        on line 11 of realty.sass
 
-1: div.realty-title
-2:     font-size: 22px
-3:     font-weight: bold
-4:     color: $lightish-blue
-5: 
-6: .realty-square span
-7:     font-size: 12px
-8:     color: $warm-grey
-9:     padding-right: 8px
+6:     padding-left: 10px
+7:     padding-right: 10px
+8:     margin-bottom: 20px
+9: 
+10: .realty-border
+11:     border: solid 1px $white-two
+12: 
+13: .realt-wrap
+14:     padding: 20px
+15: 
+16: div.realty-title
 
 Backtrace:
-realty.sass:4
+realty.sass:11
 C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.7.2/lib/sass/script/tree/variable.rb:49:in `_perform'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.7.2/lib/sass/script/tree/node.rb:50:in `perform'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.7.2/lib/sass/script/tree/list_literal.rb:75:in `block in _perform'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.7.2/lib/sass/script/tree/list_literal.rb:75:in `map'
+C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.7.2/lib/sass/script/tree/list_literal.rb:75:in `_perform'
 C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.7.2/lib/sass/script/tree/node.rb:50:in `perform'
 C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.7.2/lib/sass/tree/visitors/perform.rb:398:in `visit_prop'
 C:/Ruby25-x64/lib/ruby/gems/2.5.0/gems/sass-3.7.2/lib/sass/tree/visitors/base.rb:36:in `visit'
@@ -60,4 +66,4 @@ C:/Ruby25-x64/bin/sass:23:in `<main>'
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$lightish-blue\".\A         on line 4 of realty.sass\A \A 1: div.realty-title\A 2:     font-size: 22px\A 3:     font-weight: bold\A 4:     color: $lightish-blue\A 5: \A 6: .realty-square span\A 7:     font-size: 12px\A 8:     color: $warm-grey\A 9:     padding-right: 8px"; }
+  content: "Error: Undefined variable: \"$white-two\".\A         on line 11 of realty.sass\A \A 6:     padding-left: 10px\A 7:     padding-right: 10px\A 8:     margin-bottom: 20px\A 9: \A 10: .realty-border\A 11:     border: solid 1px $white-two\A 12: \A 13: .realt-wrap\A 14:     padding: 20px\A 15: \A 16: div.realty-title"; }
