--- a/public/sass/entries/realty.sass
+++ b/public/sass/entries/realty.sass
@@ -149,3 +149,41 @@ h1.realty-title
     font-size: 22px
     font-weight: bold
     margin-bottom: 10px
+
+.realty-sidebar-user-info
+    margin-top: 30px
+
+.realty-sidebar-user-name
+    color: $greyish-brown
+
+.realty-sidebar-user-name a
+    color: $lightish-blue
+    font-weight: bold
+    line-height: 20px
+    vertical-align: middle
+
+.realty-sidebar-user-name, .realty-sidebar-user-type
+    margin-bottom: 6px
+
+.realty-sidebar-user-created
+    margin-bottom: 10px
+
+.show-user-number
+    width: 100%
+    padding: 21px 20px
+    margin: 10px 0 0 0
+    text-align: center
+
+.realty-breadcrumbs-wrap
+    margin-top: 45px
+
+.realty-paginate-nav
+    margin: 0
+    padding: 0
+
+.realty-paginate-nav li
+    list-style: none
+    float: left
+
+.realty-paginate-nav li:not(:first-child)
+    margin-left: 20px
