--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -1162,6 +1162,44 @@ h1.realty-title {
   font-weight: bold;
   margin-bottom: 10px; }
 
+.realty-sidebar-user-info {
+  margin-top: 30px; }
+
+.realty-sidebar-user-name {
+  color: #5a5a5a; }
+
+.realty-sidebar-user-name a {
+  color: #495aff;
+  font-weight: bold;
+  line-height: 20px;
+  vertical-align: middle; }
+
+.realty-sidebar-user-name, .realty-sidebar-user-type {
+  margin-bottom: 6px; }
+
+.realty-sidebar-user-created {
+  margin-bottom: 10px; }
+
+.show-user-number {
+  width: 100%;
+  padding: 21px 20px;
+  margin: 10px 0 0 0;
+  text-align: center; }
+
+.realty-breadcrumbs-wrap {
+  margin-top: 45px; }
+
+.realty-paginate-nav {
+  margin: 0;
+  padding: 0; }
+
+.realty-paginate-nav li {
+  list-style: none;
+  float: left; }
+
+.realty-paginate-nav li:not(:first-child) {
+  margin-left: 20px; }
+
 .toasts-wrap {
   position: fixed;
   top: 17px;
