--- a/public/sass/buttons.sass
+++ b/public/sass/buttons.sass
@@ -1,5 +1,5 @@
 .btn
-    padding: 11px 20px
+    padding: 12px 21px
     color: $lightish-blue
     vertical-align: middle
     line-height: 16px
@@ -18,7 +18,6 @@
 .btn-primary, .btn.active
     background: $lightish-blue
     padding: 12px 21px
-    border: 0
     color: $white-two
 
 .btn.active:hover
@@ -45,7 +44,7 @@
     margin: 0
 
 .btn.btn-lg
-    padding: 20px
+    padding: 19px 20px
     font-size: 15px
     line-height: 20px
 
@@ -76,3 +75,6 @@
     transform: scale(10, 10)
     @include opacity(0.15)
     transition: 0s
+
+.btn.no-pointer
+    cursor: initial
