--- a/public/sass/entries/realty.sass
+++ b/public/sass/entries/realty.sass
@@ -187,3 +187,15 @@ h1.realty-title
 
 .realty-paginate-nav li:not(:first-child)
     margin-left: 20px
+
+.add-video-cell
+    width: 109px
+    padding-left: 20px
+    vertical-align: top
+
+.add-video
+    margin: 0
+
+.realty-added-videos label
+    max-width: 560px
+    width: 100%
