--- a/public/sass/form.sass
+++ b/public/sass/form.sass
@@ -319,14 +319,24 @@ h1 + form.realty-create-form
 
 .autocomplete-suggestion
     padding: 6px 30px
+    cursor: pointer
+
+.autocomplete-suggestion:hover, .autocomplete-suggestion.autocomplete-selected
+    background-color: $white-two
 
 .autocomplete-group
     font-size: 12px
     color: $warm-grey
-    padding: 5px 0
+    padding: 5px 30px
     clear: both
     font-weight: 300
 
-.address-select:focus
+.autocomplete-input:focus
     outline: 0 !important
     box-shadow: none !important
+
+.header-address-autocomplete
+    max-width: 383px
+    width: 100% !important
+    margin: 15px 0 0 -30px
+    @include border-radius(4px)
