--- a/public/sass/header.sass
+++ b/public/sass/header.sass
@@ -141,6 +141,9 @@
     max-width: 150px
     width: 100%
 
+.header-filters-wrap > div:last-child input
+    @include border-radius(0 4px 4px 0)
+
 .header-filter-label
     font-size: 12px
     color: $warm-grey
