--- a/public/sass/buttons.sass
+++ b/public/sass/buttons.sass
@@ -48,6 +48,14 @@
     font-size: 15px
     line-height: 20px
 
+.btn.btn-small
+    padding: 6px 21px
+
+.btn.btn-gray
+    background: $white-two
+    border-color: $white-two
+    color: $dark-navy-blue
+
 /* Material Ripple */
 
 .btn
