--- a/public/sass/entries/realty.sass
+++ b/public/sass/entries/realty.sass
@@ -210,3 +210,9 @@ h1.realty-title
 .realty-added-videos label
     max-width: 560px
     width: 100%
+
+.pick-filter
+    margin-top: 30px
+
+.pick-filter .btn:after
+    content: 'test'
