--- a/public/sass/entries/realty.sass
+++ b/public/sass/entries/realty.sass
@@ -213,6 +213,26 @@ h1.realty-title
 
 .pick-filter
     margin-top: 30px
+    display: inline-block
+    width: 100%
+
+.pick-filter.no-filters
+    margin-bottom: 10px
 
 .pick-filter .btn:after
     content: 'test'
+
+.realty-list-content
+    margin-top: 30px
+
+.filter-sort-wrap
+    margin-top: 16px
+    line-height: 16px
+
+.filter-sort
+    cursor: pointer
+
+.filter-sort .lh-icon
+    font-size: 14px
+    margin-left: 5px
+    margin-right: 0
