--- a/public/sass/popup.sass
+++ b/public/sass/popup.sass
@@ -1,5 +1,15 @@
 .popover
-    font-family: "AvenirNextCyr",sans-serif
+    margin-top: 0 !important
+    padding: 10px 30px 15px 30px !important
+    max-width: 532px !important
+    font-family: "AvenirNextCyr",sans-serif !important
+    border: 0 !important
+
+.popover .arrow
+    display: none !important
+
+.popover .popover-body
+    padding: 0 !important
 
 .popup-question
     color: $dark-navy-blue
