--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -621,7 +621,17 @@ h1 + form.realty-create-form {
   margin: 50px 0 20px 0; }
 
 .popover {
-  font-family: "AvenirNextCyr", sans-serif; }
+  margin-top: 0 !important;
+  padding: 10px 30px 15px 30px !important;
+  max-width: 532px !important;
+  font-family: "AvenirNextCyr", sans-serif !important;
+  border: 0 !important; }
+
+.popover .arrow {
+  display: none !important; }
+
+.popover .popover-body {
+  padding: 0 !important; }
 
 .popup-question {
   color: #000b28;
@@ -856,17 +866,6 @@ h1 + form.realty-create-form {
   top: 19px;
   right: 14px;
   font-size: 14px; }
-
-.adv-form-header .popover {
-  margin-top: 0;
-  padding: 10px 30px 15px 30px;
-  max-width: 532px; }
-
-.adv-form-header .popover .arrow {
-  display: none; }
-
-.adv-form-header .popover .popover-body {
-  padding: 0; }
 
 .header-filter-simple-list {
   margin: 0 -30px;
@@ -1264,10 +1263,30 @@ h1.realty-title {
   width: 100%; }
 
 .pick-filter {
-  margin-top: 30px; }
+  margin-top: 30px;
+  display: inline-block;
+  width: 100%; }
+
+.pick-filter.no-filters {
+  margin-bottom: 10px; }
 
 .pick-filter .btn:after, .pick-filter .btn-disabled:after {
   content: "test"; }
+
+.realty-list-content {
+  margin-top: 30px; }
+
+.filter-sort-wrap {
+  margin-top: 16px;
+  line-height: 16px; }
+
+.filter-sort {
+  cursor: pointer; }
+
+.filter-sort .lh-icon {
+  font-size: 14px;
+  margin-left: 5px;
+  margin-right: 0; }
 
 .toasts-wrap {
   position: fixed;
