--- a/public/sass/buttons.sass
+++ b/public/sass/buttons.sass
@@ -56,6 +56,10 @@
     border-color: $white-two
     color: $dark-navy-blue
 
+.btn-block
+    display: block
+    width: 100%
+
 /* Material Ripple */
 
 .btn
