--- a/public/sass/entries/cats.sass
+++ b/public/sass/entries/cats.sass
@@ -1,8 +1,13 @@
+.realty-cats-list-content
+    margin: -6px 0 -8px 0
+
 .realty-cats-list-content label
     line-height: 20px
     color: $warm-grey
     margin-bottom: 5px
     display: inline-block
+    font-weight: 300
+    margin-top: 0
 
 .adv-cats-link
     font-size: 15px
@@ -15,3 +20,6 @@
 
 .realty-cats-list-content .d-table-cell:not(:last-child)
     padding-right: 30px
+
+.realty-cats-list-content .d-table .d-table-row:last-child a
+    padding-bottom: 0
