--- a/public/sass/entries/realty.sass
+++ b/public/sass/entries/realty.sass
@@ -236,3 +236,15 @@ h1.realty-title
     font-size: 14px
     margin-left: 5px
     margin-right: 0
+
+.filter-sort-pick li:first-letter
+    text-transform: uppercase
+
+.pick-filter .lh-icon
+    margin: -2px 0 0 8px
+    font-size: 14px
+    display: inline-block
+
+.pick-filter .lh-icon:hover:before
+    color: $lightish-blue
+    transition: .2s
