--- a/public/sass/icons.sass
+++ b/public/sass/icons.sass
@@ -18,6 +18,10 @@
     -moz-osx-font-smoothing: grayscale
     vertical-align: middle
 
+.lh-icon-cross:before
+    content: "\e90e"
+    color: #bdbdbd
+
 .lh-icon:not(.lh-after)
     margin-right: 7px
 
