--- a/public/sass/popup.sass
+++ b/public/sass/popup.sass
@@ -67,3 +67,12 @@
 
 .modal-footer:empty
     padding: 0 !important
+
+#auth-form-modal .modal-dialog
+    max-width: 380px
+
+#auth-form-modal .modal-content
+    padding: 50px 40px
+
+#auth-form-modal form
+    margin: 0
