--- a/public/sass/form.sass
+++ b/public/sass/form.sass
@@ -1,3 +1,6 @@
+div .form-group
+    margin-bottom: 0
+
 input:not([type=checkbox]).form-control::placeholder
     color: $dark-navy-blue
 
@@ -60,21 +63,21 @@ textarea.form-control
     transition: .1s
     border: 1px solid #c4c4c4
     font-size: 0
-    line-height: 17px
+    line-height: 16px
     vertical-align: middle
     margin-right: 10px
-    padding-left: 1px
-    margin-top: -1px
+    margin-top: -2px
 
 .checkbox:checked + label:before
     border-color: $toxic-green
 
 .checkbox:checked + label:before
-    font-size: 12px
+    font-size: 10px
 
 .checkbox.blue:checked + label:before
-    color: $lightish-blue
+    color: $white
     border-color: $lightish-blue
+    background: $lightish-blue
 
 .select2-container--default .select2-selection--single .select2-selection__rendered
     line-height: 60px
@@ -151,6 +154,10 @@ label
     line-height: 20px
     color: $dark-navy-blue
     margin: 20px 0
+    display: block
+
+label.m-light
+    margin: 10px 0
 
 label span
     color: $red
@@ -340,3 +347,27 @@ h1 + form.realty-create-form
     width: 100% !important
     margin: 15px 0 0 -30px
     @include border-radius(4px)
+
+.form-after-desc
+    font-size: 12px
+    line-height: 20px
+    color: $greyish-brown
+    padding: 0 18px
+
+
+.popover.tooltip_err
+    max-width: 300px !important
+    padding: 20px 30px !important
+    background: $red
+    @include border-radius(4px !important)
+    box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.25)
+    line-height: 20px
+
+.popover.tooltip_err .popover-body
+    color: $white
+
+.popover.tooltip_err .arrow
+    display: block !important
+
+.popover.tooltip_err .arrow:after
+    border-right-color: $red
