--- a/public/sass/auth.sass
+++ b/public/sass/auth.sass
@@ -19,3 +19,32 @@
 .auth-tabs li a:hover, .auth-tabs li a.active
     color: $dark-navy-blue
     text-decoration: none
+
+.auth-form-title
+    font-size: 15px
+    font-weight: bold
+    line-height: 20px
+    color: $dark-navy-blue
+    margin: 4px 0
+
+.auth-form-desc
+    font-size: 15px
+    line-height: 20px
+    color: $dark-navy-blue
+    margin: 0 0 22px 0
+
+
+.auth-reset-back i:before
+    color: #332e0d
+    font-size: 10px
+    font-weight: bold
+
+.btn.auth-reset-back
+    font-weight: bold
+    color: $lightish-blue
+    margin: 0 0 6px -21px
+    padding: 12px 21px
+
+.btn.auth-reset-back i
+    margin-top: -3px
+    display: inline-block
