--- a/public/sass/form.sass
+++ b/public/sass/form.sass
@@ -153,7 +153,7 @@ label
     font-weight: bold
     line-height: 20px
     color: $dark-navy-blue
-    margin: 20px 0
+    margin: 16px 0
     display: block
 
 label.m-light
@@ -371,3 +371,6 @@ h1 + form.realty-create-form
 
 .popover.tooltip_err .arrow:after
     border-right-color: $red
+
+.form-inline-table .d-table-cell:not(:first-child)
+    padding-left: 20px
